# dracula-dl

./: .gitignore  LICENSE  README.md  dracula.bat  dracula.py  fix_python_path.bat  pyproject.toml  requirements.txt  setup_check.py  tui.py
.agents/skills/tailwind-4-docs/references/: docs-source.txt
docs/: package-lock.json  package.json
docs/src/components/: CodeTabs.astro  CopyButton.astro  NebulaFlow.astro  SpotlightCard.astro  Tabs.astro
docs/src/layouts/: Base.astro  BaseLayout.astro
docs/src/lib/: shiki-highlighter.ts
docs/src/pages/: cli.astro  commands.astro  index.astro  installation.astro  tui.astro
docs/src/styles/: global.css
dracula_dl/: __init__.py  __main__.py  cli.py  tui.py
